--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,68 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-# Enables namespacing of each library's R class so that its R class includes only the
-# resources declared in the library itself and none from the library's dependencies,
-# thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+VERSION_NAME=1.0.0
+VERSION_CODE=1
+GROUP=io.github.rakibhasan1030.localeCraftBD
+POM_DESCRIPTION=This project contain all information of the devision, district, sub-district and unions.
+POM_URL=https://github.com/rakibhasan1030/LocaleCraftBD
+POM_SCM_URL=https://github.com/rakibhasan1030/LocaleCraftBD
+POM_SCM_CONNECTION=scm:git@github.com:rakibhasan1030/LocaleCraftBD.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:rakibhasan1030/LocaleCraftBD.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://github.com/rakibhasan1030/LocaleCraftBD/blob/master/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=rakibhasan1030
+POM_DEVELOPER_NAME=Rakib Hasan
+POM_DEVELOPER_EMAIL=rakibhasan1030@gmail.com
+signing.keyId=1AF84DF9
+signing.password=Rakib7928
+signing.secretKeyRingFile=C\:/Users/rakib/.gnupg/secring.gpg
+ossrhUsername=rakibhasan1030
+ossrhPassword=#Rakib7928Sonatype
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
